--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<table cellspacing="30">
 			<tr>
 				<td>
-					<img src ="C:\Users\HP\Desktop\Formation frontend coder\Challenge des tableaux\MA_PHOTO-modified.png">
+					<img src ="MA_PHOTO-modified.png">
 				</td>
 				<td>
 					<h1>ZIOMPOU JEAN ROLAND</h1>
@@ -60,15 +60,15 @@
 					<table cellspacing="10">
 						<tr>
 							<td>HTML</td>
-							<td align ="right">⭐⭐⭐⭐⭐</td>
+							<td align ="right">⭐</td>
 						</tr>
 						<tr>
 							<td>Photoshop CS 12</td>
-							<td align ="right">⭐⭐⭐⭐</td>
+							<td align ="right">⭐⭐</td>
 						</tr>
 						<tr>
 							<td>EXCEL</td>
-							<td align ="right">⭐⭐⭐⭐</td>
+							<td align ="right">⭐⭐⭐</td>
 						</tr>
 						<tr>
 							<td>WORD</td>
@@ -80,11 +80,11 @@
 					<table cellspacing="10">
 						<tr>
 							<td>Python</td>
-							<td align ="right">⭐⭐⭐⭐⭐</td>
+							<td align ="right">⭐</td>
 						</tr>
 						<tr>
 							<td>Javascript</td>
-							<td align ="right">⭐⭐⭐</td>
+							<td align ="right">⭐</td>
 						</tr>
 						<tr>
 							<td>Machin learning</td>
