--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 				<th>Expériences</th>
 			</tr>
 			<tr> 
+				<td>(Depuis janvier 2023)</td>
+				<td>Fondateur de "LE MANGUIANT" E.P de droit ivoirien</td>
+			</tr>
+			<tr> 
 				<td>(juillet - décembre 2022)</td>
 				<td>Programme PMNDPE avec l'ONG ASAPSU</td>
 			</tr>
